# conference-room

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs  message.rs  participant.rs  room.rs  rooms_registry.rs  uuids.rs  websocket.rs
src/monitoring/: handshake.rs  mod.rs
src/participant/: error.rs
src/room/: error.rs
