[package]
name = "confroom-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
mediasoup = "0.17.0"
tokio = {version="1.38.0", features = ["full"]}
tokio-macros = {version = "*"}
uuid = "1.8.0"
warp = "0.3.7"
