[package]
name = "confroom_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = {version = "4.5.7", features = ["derive"]}
clap_derive = "4.5.5"
env_logger = "0.11.3"
event-listener-primitives = "2.0.1"
futures-util = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.21"
mediasoup = "0.17.0"
parking_lot = "0.12.3"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = {version="1.38.0", features = ["full"]}
tokio-macros = {version = "*"}
uuid = "1.8.0"
warp = {version="0.3.7", features = ["tls"]}
